feat: prepare controllers to get and create nodes
